Restored to '3804b049d2e150905007912ada79698e01688a17'
Replit-Restored-To: 3804b049d2e150905007912ada79698e01688a17

--- a/.vercelignore
+++ b/.vercelignore
@@ -7,14 +7,8 @@ node_modules
 *.log
 coverage
 .nyc_output
-.replit
+server
+shared
 replit.md
-HONEST_STATUS.md
-PRODUCTION_READINESS.md
-DEPLOYMENT.md
-CONTRACT_FUNCTION_COMPARISON.md
-DEPLOYED_CONTRACT_ANALYSIS.md
-VERCEL_DEPLOYMENT.md
-contracts/
-scripts/
-attached_assets/
+.replit
+package-lock.json
