--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@openzeppelin/contracts": "^5.4.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -45,14 +46,12 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.60.5",
-    "@types/cors": "^2.8.19",
     "@types/memoizee": "^0.4.12",
     "@wagmi/core": "^2.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.39.1",
@@ -60,10 +59,9 @@
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
     "express": "^4.21.2",
-    "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
-    "helmet": "^8.1.0",
+    "hardhat": "^2.26.0",
     "input-otp": "^1.4.2",
     "js-sha3": "^0.9.3",
     "lucide-react": "^0.453.0",
